objects/User_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Job_Code_Level__c</fullName>
        <label>Job Code Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Senior Director</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>SVP</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <label>Profile Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BizBox</fullName>
                </value>
                <value>
                    <fullName>BizBox_Reveneer_Rep</fullName>
                </value>
                <value>
                    <fullName>BizBox Rep</fullName>
                </value>
                <value>
                    <fullName>BizBox Support</fullName>
                </value>
                <value>
                    <fullName>BizBox Support Read Only</fullName>
                </value>
                <value>
                    <fullName>BSD Pricing</fullName>
                </value>
                <value>
                    <fullName>Business Pro Rep</fullName>
                </value>
                <value>
                    <fullName>Chatter Free User</fullName>
                </value>
                <value>
                    <fullName>Complaince</fullName>
                </value>
                <value>
                    <fullName>Contract Development</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Field Sales</fullName>
                </value>
                <value>
                    <fullName>Field Sales Leadership</fullName>
                </value>
                <value>
                    <fullName>Field Sales Tech</fullName>
                </value>
                <value>
                    <fullName>Fields Sales Comp</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Global Sales</fullName>
                </value>
                <value>
                    <fullName>Global Sales Comp</fullName>
                </value>
                <value>
                    <fullName>GrandParent Maintenance</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Inside Sales Comp</fullName>
                </value>
                <value>
                    <fullName>Inside Sales Mgr Comp</fullName>
                </value>
                <value>
                    <fullName>IT Contractor</fullName>
                </value>
                <value>
                    <fullName>Lattice</fullName>
                </value>
                <value>
                    <fullName>LatticeUser</fullName>
                </value>
                <value>
                    <fullName>Lead Triage</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <label>Role Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Title__c</fullName>
        <label>Short Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Code__c</fullName>
        <formula>MID(Name, 0, 13)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <formula>User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Title__c</fullName>
        <formula>User__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Setting</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Setting</label>
    <listViews>
        <fullName>All_User_Settings</fullName>
        <columns>NAME</columns>
        <columns>Role_Description__c</columns>
        <columns>Profile_Name__c</columns>
        <columns>Short_Title__c</columns>
        <columns>User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Job_Code_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All User Settings</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Users_with_Settings</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Profile_Name__c</columns>
        <columns>User_Title__c</columns>
        <columns>User_Status__c</columns>
        <columns>Short_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Status__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>User__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Inactive Users with Settings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Job Code/Employee ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_employee_ID_job_code_length</fullName>
        <active>true</active>
        <errorConditionFormula>OR ( LEN(Name) &lt; 6, LEN(Name) &gt; 13)</errorConditionFormula>
        <errorMessage>Employee ID / Job Code must be between 6 and 13 characters</errorMessage>
    </validationRules>
</CustomObject>